--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -23,6 +23,7 @@ env:
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
+  DIY_CUSTOM_SH: diy-custom.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
@@ -69,12 +70,9 @@ jobs:
 
     - name: Custom scripts
       run: |
-        cd openwrt 
-        rm -rf feeds/luci/applications/luci-app-mosdns
-        rm -rf feeds/packages/net/{alist,adguardhome,mosdns,xray*,v2ray*,v2ray*,sing*,smartdns}
-        rm -rf feeds/packages/utils/v2dat
-        rm -rf feeds/packages/lang/golang
-        git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
+        chmod +x $DIY_CUSTOM_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_CUSTOM_SH
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
