Test event trigger

--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -15,6 +15,9 @@ name: OpenWrt Builder
 on:
   repository_dispatch:
   workflow_dispatch:
+  push:
+    tags:
+      - release-*
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
