--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - release-*
+      - release-x86*
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
